feat: add articles and article meta typing + setup prettier explicitely

--- a/src/contents/fourth-article.mdx
+++ b/src/contents/fourth-article.mdx
@@ -1,8 +1,9 @@
 export const metadata = {
   title: "I'm a fourth article",
-  author: "Lila Rest",
+  description: "This is a description",
+  date: new Date("2023-05-30"),
+  heroImage: "image.jpg",
   hot: false,
-  date: "2023-05-30",
 };
 
 # I'm a fourth article
